<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0F6CFA6"
    android:backgroundTint="#D0F6CFA6"
    android:gravity="center"
    android:orientation="vertical">

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:format="Time: %s"
        android:textSize="53dp" />

    <ImageButton
        android:id="@+id/buttonStart"
        android:layout_width="123dp"
        android:layout_height="95dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/start"
        android:src="@drawable/ic_start" />

    <ImageButton
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/stop"
        android:src="@drawable/ic_stop" />

    <ImageButton
        android:id="@+id/buttonReset"
        android:layout_width="127dp"
        android:layout_height="84dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/reset"
        android:src="@drawable/ic_reset" />

    <ImageButton
        android:id="@+id/buttonBackToMain"
        android:layout_width="169dp"
        android:layout_height="89dp"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="@color/orangr"
        android:contentDescription="@string/back_to_main_activity"
        android:src="@drawable/ic_back" />

</LinearLayout>
