<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_background"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/textViewTaskTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_title"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewTaskDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/task_description"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonEdit"
                android:layout_width="67dp"
                android:layout_height="78dp"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/edit"
                android:src="@drawable/edit" />

            <ImageButton

                android:id="@+id/buttonDelete"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/delete"
                android:src="@drawable/delete" />

            <Button
                android:id="@+id/buttonSetTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="#FF6E40"
                android:text="@string/set_timer" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
